@@ -26,9 +26,12 @@ import org.hyperledger.besu.ethereum.core.Block;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockchainSetupUtil;
 import org.hyperledger.besu.ethereum.core.Difficulty;
+import org.hyperledger.besu.ethereum.core.SyncBlock;
+import org.hyperledger.besu.ethereum.core.SyncBlockBody;
 import org.hyperledger.besu.ethereum.core.TransactionReceipt;
 import org.hyperledger.besu.ethereum.eth.manager.EthContext;
 import org.hyperledger.besu.ethereum.eth.manager.EthPeer;
+import org.hyperledger.besu.ethereum.eth.manager.EthPeerImmutableAttributes;
 import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManager;
 import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManagerTestBuilder;
 import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManagerTestUtil;
@@ -38,9 +41,11 @@ import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutor;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutorResponseCode;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutorResult;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetBodiesFromPeerTask;
+import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetBodiesFromPeerTaskExecutorAnswer;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetHeadersFromPeerTask;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetHeadersFromPeerTaskExecutorAnswer;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetReceiptsFromPeerTask;
+import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetSyncBlockBodiesFromPeerTask;
 import org.hyperledger.besu.ethereum.eth.sync.ChainDownloader;
 import org.hyperledger.besu.ethereum.eth.sync.SynchronizerConfiguration;
 import org.hyperledger.besu.ethereum.eth.sync.fastsync.FastSyncState;
@@ -48,20 +53,23 @@ import org.hyperledger.besu.ethereum.eth.sync.fastsync.checkpoint.Checkpoint;
 import org.hyperledger.besu.ethereum.eth.sync.fastsync.checkpoint.ImmutableCheckpoint;
 import org.hyperledger.besu.ethereum.eth.sync.state.SyncState;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
-import org.hyperledger.besu.ethereum.trie.diffbased.bonsai.storage.BonsaiWorldStateKeyValueStorage;
+import org.hyperledger.besu.ethereum.rlp.BytesValueRLPInput;
+import org.hyperledger.besu.ethereum.rlp.BytesValueRLPOutput;
 import org.hyperledger.besu.ethereum.trie.forest.storage.ForestWorldStateKeyValueStorage;
+import org.hyperledger.besu.ethereum.trie.pathbased.bonsai.storage.BonsaiWorldStateKeyValueStorage;
 import org.hyperledger.besu.ethereum.worldstate.WorldStateKeyValueStorage;
 import org.hyperledger.besu.ethereum.worldstate.WorldStateStorageCoordinator;
 import org.hyperledger.besu.metrics.SyncDurationMetrics;
 import org.hyperledger.besu.metrics.noop.NoOpMetricsSystem;
 import org.hyperledger.besu.plugin.services.storage.DataStorageFormat;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.AfterEach;
@@ -162,7 +170,7 @@ public class CheckPointSyncChainDownloaderTest {
               return new PeerTaskExecutorResult<>(
                   Optional.of(getReceiptsFromPeerTaskResult),
                   PeerTaskExecutorResponseCode.SUCCESS,
-                  Optional.empty());
+                  Collections.emptyList());
             });
 
     final Answer<PeerTaskExecutorResult<List<BlockHeader>>> getHeadersAnswer =
@@ -171,19 +179,38 @@ public class CheckPointSyncChainDownloaderTest {
     when(peerTaskExecutor.executeAgainstPeer(any(GetHeadersFromPeerTask.class), any(EthPeer.class)))
         .thenAnswer(getHeadersAnswer);
 
-    Answer<PeerTaskExecutorResult<List<Block>>> getBlockBodiesAnswer =
+    final Answer<PeerTaskExecutorResult<List<Block>>> getBlocksAnswer =
+        new GetBodiesFromPeerTaskExecutorAnswer(otherBlockchain, ethContext.getEthPeers());
+    when(peerTaskExecutor.execute(any(GetBodiesFromPeerTask.class))).thenAnswer(getBlocksAnswer);
+    when(peerTaskExecutor.executeAgainstPeer(any(GetBodiesFromPeerTask.class), any(EthPeer.class)))
+        .thenAnswer(getBlocksAnswer);
+
+    Answer<PeerTaskExecutorResult<List<SyncBlock>>> getBlockBodiesAnswer =
         (invocationOnMock) -> {
-          GetBodiesFromPeerTask task = invocationOnMock.getArgument(0, GetBodiesFromPeerTask.class);
+          GetSyncBlockBodiesFromPeerTask task =
+              invocationOnMock.getArgument(0, GetSyncBlockBodiesFromPeerTask.class);
           List<Block> blocks =
               task.getBlockHeaders().stream()
                   .map((bh) -> new Block(bh, otherBlockchain.getBlockBody(bh.getBlockHash()).get()))
-                  .collect(Collectors.toList());
-          return new PeerTaskExecutorResult<List<Block>>(
-              Optional.of(blocks), PeerTaskExecutorResponseCode.SUCCESS, Optional.empty());
+                  .toList();
+          List<SyncBlock> syncBlocks = new ArrayList<>();
+          for (Block block : blocks) {
+            BytesValueRLPOutput rlpOutput = new BytesValueRLPOutput();
+            block.getBody().writeWrappedBodyTo(rlpOutput);
+            SyncBlockBody syncBlockBody =
+                SyncBlockBody.readWrappedBodyFrom(
+                    new BytesValueRLPInput(rlpOutput.encoded(), true), true, protocolSchedule);
+            syncBlocks.add(new SyncBlock(block.getHeader(), syncBlockBody));
+          }
+          return new PeerTaskExecutorResult<>(
+              Optional.of(syncBlocks),
+              PeerTaskExecutorResponseCode.SUCCESS,
+              Collections.emptyList());
         };
-    when(peerTaskExecutor.execute(any(GetBodiesFromPeerTask.class)))
+    when(peerTaskExecutor.execute(any(GetSyncBlockBodiesFromPeerTask.class)))
         .thenAnswer(getBlockBodiesAnswer);
-    when(peerTaskExecutor.executeAgainstPeer(any(GetBodiesFromPeerTask.class), any(EthPeer.class)))
+    when(peerTaskExecutor.executeAgainstPeer(
+            any(GetSyncBlockBodiesFromPeerTask.class), any(EthPeer.class)))
         .thenAnswer(getBlockBodiesAnswer);
   }
 
@@ -204,7 +231,7 @@ public class CheckPointSyncChainDownloaderTest {
         ethContext,
         syncState,
         new NoOpMetricsSystem(),
-        new FastSyncState(otherBlockchain.getBlockHeader(pivotBlockNumber).get()),
+        new FastSyncState(otherBlockchain.getBlockHeader(pivotBlockNumber).get(), false),
         SyncDurationMetrics.NO_OP_SYNC_DURATION_METRICS);
   }
 
@@ -222,12 +249,13 @@ public class CheckPointSyncChainDownloaderTest {
         SynchronizerConfiguration.builder()
             .downloaderChainSegmentSize(5)
             .downloaderHeadersRequestSize(3)
-            .isPeerTaskSystemEnabled(false)
+            .isPeerTaskSystemEnabled(true)
             .build();
     final long pivotBlockNumber = 25;
     ethContext
         .getEthPeers()
         .streamAvailablePeers()
+        .map(EthPeerImmutableAttributes::ethPeer)
         .forEach(
             ethPeer -> {
               ethPeer.setCheckpointHeader(
@@ -256,80 +284,11 @@ public class CheckPointSyncChainDownloaderTest {
 
     final long pivotBlockNumber = 10;
     final SynchronizerConfiguration syncConfig =
-        SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build();
-    ethContext
-        .getEthPeers()
-        .streamAvailablePeers()
-        .forEach(
-            ethPeer -> {
-              ethPeer.setCheckpointHeader(
-                  otherBlockchainSetup.getBlocks().get((int) checkpoint.blockNumber()).getHeader());
-            });
-    final ChainDownloader downloader = downloader(syncConfig, pivotBlockNumber);
-    final CompletableFuture<Void> result = downloader.start();
-
-    peer.respondWhileOtherThreadsWork(responder, () -> !result.isDone());
-
-    assertThat(result).isCompleted();
-    assertThat(localBlockchain.getChainHeadBlockNumber()).isEqualTo(pivotBlockNumber);
-    assertThat(localBlockchain.getChainHeadHeader())
-        .isEqualTo(otherBlockchain.getBlockHeader(pivotBlockNumber).get());
-  }
-
-  @ParameterizedTest
-  @ArgumentsSource(CheckPointSyncChainDownloaderTestArguments.class)
-  public void shouldSyncToPivotBlockInMultipleSegmentsWithPeerTaskSystem(
-      final DataStorageFormat storageFormat) {
-    setup(storageFormat);
-
-    final RespondingEthPeer peer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager, otherBlockchain);
-    final RespondingEthPeer.Responder responder =
-        RespondingEthPeer.blockchainResponder(otherBlockchain);
-
-    final SynchronizerConfiguration syncConfig =
-        SynchronizerConfiguration.builder()
-            .downloaderChainSegmentSize(5)
-            .downloaderHeadersRequestSize(3)
-            .isPeerTaskSystemEnabled(true)
-            .build();
-    final long pivotBlockNumber = 25;
-    ethContext
-        .getEthPeers()
-        .streamAvailablePeers()
-        .forEach(
-            ethPeer -> {
-              ethPeer.setCheckpointHeader(
-                  otherBlockchainSetup.getBlocks().get((int) checkpoint.blockNumber()).getHeader());
-            });
-    final ChainDownloader downloader = downloader(syncConfig, pivotBlockNumber);
-    final CompletableFuture<Void> result = downloader.start();
-
-    peer.respondWhileOtherThreadsWork(responder, () -> !result.isDone());
-
-    assertThat(result).isCompleted();
-    assertThat(localBlockchain.getChainHeadBlockNumber()).isEqualTo(pivotBlockNumber);
-    assertThat(localBlockchain.getChainHeadHeader())
-        .isEqualTo(otherBlockchain.getBlockHeader(pivotBlockNumber).get());
-  }
-
-  @ParameterizedTest
-  @ArgumentsSource(CheckPointSyncChainDownloaderTestArguments.class)
-  public void shouldSyncToPivotBlockInSingleSegmentWithPeerTaskSystem(
-      final DataStorageFormat storageFormat) {
-    setup(storageFormat);
-
-    final RespondingEthPeer peer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager, otherBlockchain);
-    final RespondingEthPeer.Responder responder =
-        RespondingEthPeer.blockchainResponder(otherBlockchain);
-
-    final long pivotBlockNumber = 10;
-    final SynchronizerConfiguration syncConfig =
         SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(true).build();
     ethContext
         .getEthPeers()
         .streamAvailablePeers()
+        .map(EthPeerImmutableAttributes::ethPeer)
         .forEach(
             ethPeer -> {
               ethPeer.setCheckpointHeader(
